--- a/vite-project/src/pages/destinations/destination.css
+++ b/vite-project/src/pages/destinations/destination.css
@@ -15,7 +15,7 @@
   font-size: 28px;
   letter-spacing: 4.75px;
   color: white;
-  margin-top: 25%;
+  margin-top: 20%;
   text-align: center;
   text-transform: uppercase;
 }
